--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,9 @@ environment:
   sdk: '>=3.4.4 <4.0.0'
 
 dependencies:
+  firebase_auth: ^5.3.3
+  firebase_core: ^3.8.0
+  cloud_firestore: ^5.5.0
   flutter:
     sdk: flutter
 
