--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cloud_firestore: ^5.5.0
   flutter:
     sdk: flutter
+  fluttertoast: ^8.2.8
 
 dev_dependencies:
   flutter_test:
